--- a/src/components/Layouts/SearchLayout/SearchLayout.module.scss
+++ b/src/components/Layouts/SearchLayout/SearchLayout.module.scss
@@ -7,3 +7,14 @@
   width: 100%;
   justify-content: center;
 }
+
+.partLeft {
+  width: 820px;
+  background-color: aqua;
+}
+
+.partRight {
+  width: 320px;
+  background-color: rgb(255, 255, 255);
+  margin-left: 20px;
+}
