--- a/src/components/ArticleDetail/ArticleDetail.module.scss
+++ b/src/components/ArticleDetail/ArticleDetail.module.scss
@@ -6,9 +6,10 @@
 
 .left {
   width: 820px;
+  background-color: brown;
 }
 
-.right { 
+.right {
   width: 320px;
   background-color: rgb(255, 255, 255);
   margin-left: 20px;
