--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -1,24 +1,10 @@
 .wrapper {
   width: 100%;
-  display: flex;
-  justify-content: center;
+  height: 249px;
   background-color: #ffffff;
   margin-bottom: 20px;
 }
 
-.left {
-  width: 820px;
-
-  background-color: #ffffff;
-  padding-top: 10px;
-}
-
-.right {
-  padding-top: 10px;
-  width: 320px;
-  background-color: rgb(255, 255, 255);
-  margin-left: 20px;
-}
 .tittle {
   font-size: 30px;
   font-weight: 700;
@@ -38,45 +24,36 @@
   padding-right: 550px;
   text-align: center;
   position: absolute;
-  font-size: 30px;
-  font-weight: 600;
+  font-size:30px;
+  font-weight: 500;
   font-family: Arial, Helvetica, sans-serif;
   text-decoration: none;
   color: rgb(255, 255, 255);
   &:hover {
-    cursor: pointer;
-    color: var(--primary-color);
+      cursor: pointer;
+      color: var(--primary-color);
   }
 }
 
-.image {
-  width: 180px;
-  height: 120px;
-}
-
 .tittle1 {
+  padding-top: 20px;
   font-size: 20px;
   font-weight: 600;
   &:hover {
     cursor: pointer;
     color: var(--primary-color);
   }
-  margin-left: 10px;
 }
 
 .news1 {
-  margin-top: 12px;
-  padding-bottom: 12px;
-  border-bottom: 1px solid #e3e3e3;
   display: flex;
   flex-direction: row;
+  margin-top: 8px;
+  margin-bottom: 4px;
 }
 
 .content1 {
   margin-left: 8px;
-  overflow: hidden; /* Ẩn phần dư thừa của nội dung */
-  text-overflow: ellipsis; /* Hiển thị dấu chấm ba chấm (...) khi nội dung bị cắt */
-  white-space: nowrap;
 }
 
 .news2 {
