--- a/src/components/CategoryPart/CategoryPart.module.scss
+++ b/src/components/CategoryPart/CategoryPart.module.scss
@@ -1,69 +1,97 @@
 .wrapper {
-    width: 380px;
-    min-height: 200px;
-    background-color: #fff;
-    margin-bottom: 20px;
+  width: 380px;
+  min-height: 200px;
+  background-color: #fff;
+
+  margin-bottom: 20px;
+}
+
+.header {
+  display: flex;
+  flex-direction: row;
+  padding: 8px 0;
+  margin-left: 4px;
+}
+
+.header-item {
+  background-color: var(--primary-color);
+  border-radius: 2px;
+  padding: 4px;
+  font-weight: 600;
+}
+
+.header-item2 {
+  background-color: #ecf8f9;
+  border-radius: 2px;
+  padding: 4px;
+  margin-left: 8px;
+}
+.tittle {
+  font-size: 16px;
+  font-weight: 600;
+  &:hover {
+    cursor: pointer;
+    color: var(--primary-color);
   }
-  .header {
-    display: flex;
-    flex-direction: row;
-    padding: 8px 0;
-    margin-left: 4px;
+}
+.news {
+  display: flex;
+  flex-direction: row;
+  margin-top: 8px;
+  margin-bottom: 4px;
+}
+.news1 {
+  background-color: rgb(234, 248, 210);
+
+  padding: 1px 10px;
+  overflow: hidden; /* Ẩn phần dư thừa của nội dung */
+  text-overflow: ellipsis; /* Hiển thị dấu chấm ba chấm (...) khi nội dung bị cắt */
+  white-space: nowrap;
+}
+
+.news2 {
+  background-color: rgb(213, 236, 171);
+  padding: 1px 10px;
+  padding-bottom: 12px;
+}
+
+.item {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+}
+.item a {
+  font-size: 13px;
+  font-family: Arial, Helvetica, sans-serif;
+  text-decoration: none;
+  color: black;
+  margin-left: 6px;
+
+  overflow: hidden; /* Ẩn phần dư thừa của nội dung */
+  text-overflow: ellipsis; /* Hiển thị dấu chấm ba chấm (...) khi nội dung bị cắt */
+  &:hover {
+    cursor: pointer;
+    color: var(--primary-color);
   }
-  .header-item {
-    background-color: var(--primary-color);
-    border-radius: 2px;
-    padding: 4px;
-    font-weight: 600;
+}
+.item2 a {
+  margin-left: 6px;
+  font-size: 13px;
+  font-family: Arial, Helvetica, sans-serif;
+  text-decoration: none;
+  color: black;
+  overflow: hidden; /* Ẩn phần dư thừa của nội dung */
+  text-overflow: ellipsis; /* Hiển thị dấu chấm ba chấm (...) khi nội dung bị cắt */
+  &:hover {
+    cursor: pointer;
+    color: var(--primary-color);
   }
-  .header-item2 {
-    background-color: #ecf8f9;
-    border-radius: 2px;
-    padding: 4px;
-    margin-left: 8px;
-  }
-  .tittle {
-    font-size: 16px;
-    font-weight: 600;
-    &:hover {
-      cursor: pointer;
-      color: var(--primary-color);
-    }
-  }
-  .news {
-    display: flex;
-    flex-direction: row;
-    margin-top: 8px;
-    margin-bottom: 4px;
-  }
-  .news1 {
-    background-color: rgb(234, 248, 210);
-    padding: 1px 10px;
-  }
-  .news2 {
-    background-color: rgb(213, 236, 171);
-    padding: 1px 10px;
-  }
-  .item a {
-    font-size: 13px;
-    font-family: Arial, Helvetica, sans-serif;
-    text-decoration: none;
-    color: black;
-    &:hover {
-      cursor: pointer;
-      color: var(--primary-color);
-    }
-  }
-  .item2 a {
-    font-size: 13px;
-    font-family: Arial, Helvetica, sans-serif;
-    text-decoration: none;
-    color: black;
-    &:hover {
-      cursor: pointer;
-      color: var(--primary-color);
-    }
-  }
-  .content {
-    margin-left: 8px;
-  }
+}
+.content {
+  margin-left: 8px;
+  max-height: 76px; /* Đặt chiều cao tối đa cho phần tử */
+  overflow: hidden; /* Ẩn phần dư thừa của nội dung */
+  text-overflow: ellipsis; /* Hiển thị dấu chấm ba chấm (...) khi nội dung bị cắt */
+  // white-space: nowrap;
+}
