--- a/src/components/Home/Right/Right.module.scss
+++ b/src/components/Home/Right/Right.module.scss
@@ -4,44 +4,54 @@
   flex-direction: row;
   flex-wrap: wrap;
 }
+
 h1 {
   padding-top: 20px;
   padding-bottom: 20px;
 }
 
-a {
 .tittle {
   color: rgb(26, 132, 26);
-  font-size: 26px;
+  font-size: 21px;
   text-decoration: underline;
   line-height: 2;
+  font-weight: 700;
+  text-transform: uppercase;
+  margin-bottom: 16px;
 }
+
 table {
   font-family: arial;
   border-collapse: collapse;
   width: 100%;
 }
+
 td {
   font-size: 17px;
   color: black;
   padding-left: 10px;
-  padding-bottom: 10px;
+  padding-bottom: 14px;
 }
+
 th {
-  padding-bottom: 10px;
+  padding-bottom: 14px;
 }
+
 g {
   font-size: 13px;
   color: #78b43d;
-  padding: 8px;
   padding: 4px;
 }
 
-i {
 a {
   font-size: 13px;
   color: black;
-  padding: 8px;
   padding: 4px;
-} 
-}}
+}
+
+.header {
+  &:hover {
+    cursor: pointer;
+    color: var(--primary-color);
+  }
+}
