--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -1,6 +1,6 @@
 .wrapper {
   width: 100%;
-  height: 249px;
+
   background-color: #ffffff;
   margin-bottom: 20px;
 }
@@ -29,7 +29,6 @@
   font-family: Arial, Helvetica, sans-serif;
   text-decoration: none;
   color: rgb(255, 255, 255);
-
   &:hover {
     cursor: pointer;
     color: var(--primary-color);
@@ -40,7 +39,6 @@
   padding-top: 20px;
   font-size: 20px;
   font-weight: 600;
-
   &:hover {
     cursor: pointer;
     color: var(--primary-color);
@@ -50,12 +48,13 @@
 .news1 {
   display: flex;
   flex-direction: row;
-  margin-top: 8px;
-  margin-bottom: 4px;
 }
 
 .content1 {
   margin-left: 8px;
+  overflow: hidden; /* Ẩn phần dư thừa của nội dung */
+  text-overflow: ellipsis; /* Hiển thị dấu chấm ba chấm (...) khi nội dung bị cắt */
+  white-space: nowrap;
 }
 
 .news2 {
