--- a/src/components/CategoryPart2/CategoryPart2.module.scss
+++ b/src/components/CategoryPart2/CategoryPart2.module.scss
@@ -56,6 +56,11 @@
   margin-bottom: 4px;
 }
 
+.image {
+  width: 140px;
+  // height: 90;
+}
+
 .news1 {
   background-color: rgb(250, 250, 250);
   padding: 1px 10px;
