--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -19,6 +19,7 @@
   background-color: rgb(255, 255, 255);
   margin-left: 20px;
 }
+
 .tittle {
   font-size: 30px;
   font-weight: 700;
@@ -44,10 +45,11 @@
   text-align: center;
   position: absolute;
   font-size: 30px;
-  font-weight: 500;
+  font-weight: 600;
   font-family: Arial, Helvetica, sans-serif;
   text-decoration: none;
   color: rgb(255, 255, 255);
+
   &:hover {
     cursor: pointer;
     color: var(--primary-color);
@@ -57,10 +59,12 @@
 .tittle1 {
   font-size: 20px;
   font-weight: 600;
+
   &:hover {
     cursor: pointer;
     color: var(--primary-color);
   }
+
   border-top: 1px solid #e3e3e3;
   padding-top: 12px;
 }
@@ -72,8 +76,10 @@
 
 .content1 {
   margin-left: 8px;
-  overflow: hidden; /* Ẩn phần dư thừa của nội dung */
-  text-overflow: ellipsis; /* Hiển thị dấu chấm ba chấm (...) khi nội dung bị cắt */
+  overflow: hidden;
+  /* Ẩn phần dư thừa của nội dung */
+  text-overflow: ellipsis;
+  /* Hiển thị dấu chấm ba chấm (...) khi nội dung bị cắt */
   white-space: nowrap;
 }
 
