--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -19,7 +19,6 @@
   background-color: rgb(255, 255, 255);
   margin-left: 20px;
 }
-
 .tittle {
   font-size: 30px;
   font-weight: 700;
@@ -34,11 +33,6 @@
   margin-bottom: 4px;
 }
 
-.image {
-  width: 180px;
-  height: 120px;
-}
-
 .content {
   padding-top: 430px;
   padding-right: 550px;
@@ -49,37 +43,39 @@
   font-family: Arial, Helvetica, sans-serif;
   text-decoration: none;
   color: rgb(255, 255, 255);
-
   &:hover {
     cursor: pointer;
     color: var(--primary-color);
   }
+}
+
+.image {
+  width: 180px;
+  height: 120px;
 }
 
 .tittle1 {
   font-size: 20px;
   font-weight: 600;
-
   &:hover {
     cursor: pointer;
     color: var(--primary-color);
   }
-
-  border-top: 1px solid #e3e3e3;
-  padding-top: 12px;
+  margin-left: 10px;
 }
 
 .news1 {
+  margin-top: 12px;
+  padding-bottom: 12px;
+  border-bottom: 1px solid #e3e3e3;
   display: flex;
   flex-direction: row;
 }
 
 .content1 {
   margin-left: 8px;
-  overflow: hidden;
-  /* Ẩn phần dư thừa của nội dung */
-  text-overflow: ellipsis;
-  /* Hiển thị dấu chấm ba chấm (...) khi nội dung bị cắt */
+  overflow: hidden; /* Ẩn phần dư thừa của nội dung */
+  text-overflow: ellipsis; /* Hiển thị dấu chấm ba chấm (...) khi nội dung bị cắt */
   white-space: nowrap;
 }
 
