--- a/src/components/CategoryPart/CategoryPart.module.scss
+++ b/src/components/CategoryPart/CategoryPart.module.scss
@@ -28,38 +28,29 @@
   margin-left: 8px;
   font-weight: 500;
 }
-
 .tittle {
   font-size: 16px;
   font-weight: 700;
   padding: 8px 0;
-
   &:hover {
     cursor: pointer;
     color: var(--primary-color);
   }
-
-  overflow: hidden;
-  /* Ẩn phần dư thừa của nội dung */
-  text-overflow: ellipsis;
-  /* Hiển thị dấu chấm ba chấm (...) khi nội dung bị cắt */
+  overflow: hidden; /* Ẩn phần dư thừa của nội dung */
+  text-overflow: ellipsis; /* Hiển thị dấu chấm ba chấm (...) khi nội dung bị cắt */
   white-space: nowrap;
 }
-
 .news {
   display: flex;
   flex-direction: row;
 
   margin-bottom: 4px;
 }
-
 .news1 {
   background-color: rgb(234, 248, 210);
   padding: 1px 10px;
-  overflow: hidden;
-  /* Ẩn phần dư thừa của nội dung */
-  text-overflow: ellipsis;
-  /* Hiển thị dấu chấm ba chấm (...) khi nội dung bị cắt */
+  overflow: hidden; /* Ẩn phần dư thừa của nội dung */
+  text-overflow: ellipsis; /* Hiển thị dấu chấm ba chấm (...) khi nội dung bị cắt */
   white-space: nowrap;
 }
 
@@ -67,10 +58,8 @@
   background-color: rgb(213, 236, 171);
   padding: 1px 10px;
   padding-bottom: 10px;
-  overflow: hidden;
-  /* Ẩn phần dư thừa của nội dung */
-  text-overflow: ellipsis;
-  /* Hiển thị dấu chấm ba chấm (...) khi nội dung bị cắt */
+  overflow: hidden; /* Ẩn phần dư thừa của nội dung */
+  text-overflow: ellipsis; /* Hiển thị dấu chấm ba chấm (...) khi nội dung bị cắt */
   white-space: nowrap;
 }
 
@@ -81,7 +70,6 @@
   justify-content: flex-start;
   align-items: center;
 }
-
 .item a {
   font-size: 13px;
   margin-left: 6px;
@@ -89,17 +77,13 @@
   text-decoration: none;
   color: black;
 
-  overflow: hidden;
-  /* Ẩn phần dư thừa của nội dung */
-  text-overflow: ellipsis;
-
-  /* Hiển thị dấu chấm ba chấm (...) khi nội dung bị cắt */
+  overflow: hidden; /* Ẩn phần dư thừa của nội dung */
+  text-overflow: ellipsis; /* Hiển thị dấu chấm ba chấm (...) khi nội dung bị cắt */
   &:hover {
     cursor: pointer;
     color: var(--primary-color);
   }
 }
-
 .item2 a {
   font-size: 13px;
   margin-left: 6px;
@@ -107,24 +91,17 @@
   text-decoration: none;
   color: black;
 
-  overflow: hidden;
-  /* Ẩn phần dư thừa của nội dung */
-  text-overflow: ellipsis;
-
-  /* Hiển thị dấu chấm ba chấm (...) khi nội dung bị cắt */
+  overflow: hidden; /* Ẩn phần dư thừa của nội dung */
+  text-overflow: ellipsis; /* Hiển thị dấu chấm ba chấm (...) khi nội dung bị cắt */
   &:hover {
     cursor: pointer;
     color: var(--primary-color);
   }
 }
-
 .content {
   margin-left: 8px;
-  max-height: 76px;
-  /* Đặt chiều cao tối đa cho phần tử */
-  overflow: hidden;
-  /* Ẩn phần dư thừa của nội dung */
-  text-overflow: ellipsis;
-  /* Hiển thị dấu chấm ba chấm (...) khi nội dung bị cắt */
+  max-height: 76px; /* Đặt chiều cao tối đa cho phần tử */
+  overflow: hidden; /* Ẩn phần dư thừa của nội dung */
+  text-overflow: ellipsis; /* Hiển thị dấu chấm ba chấm (...) khi nội dung bị cắt */
   // white-space: nowrap;
 }
