--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -1,10 +1,9 @@
 @import "normalize.css";
 @import url("https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
-
 :root {
   --primary-color: #78b43d;
   --header-height: 50px;
-  --default-layout-width: 1280px;
+  --default-layout-width: 86%;
   --box-shadow: 0px 1px 3px rgb(3 0 71 / 9%);
 }
 
