--- a/src/components/common/Header/Header.module.scss
+++ b/src/components/common/Header/Header.module.scss
@@ -41,8 +41,8 @@ nav {
   }
 }
 
-.menu > li,
-.menu > a {
+.menu>li,
+.menu>a {
   display: inline-block;
 }
 
@@ -54,7 +54,7 @@ nav {
   font-size: 10px;
 }
 
-.menu > li:hover {
+.menu>li:hover {
   background-color: #196c3d;
   color: #fff;
 }
@@ -90,6 +90,7 @@ nav {
   top: 0;
   background: #2c3e50;
   display: none;
+
   li {
     a {
       padding: 6px;
@@ -97,12 +98,12 @@ nav {
   }
 }
 
-.menu > li:hover > .submenu {
+.menu>li:hover>.submenu {
   display: block;
   background-color: #219956;
 }
 
-.submenu > li:hover > .submenu2 {
+.submenu>li:hover>.submenu2 {
   display: block;
   color: white;
 }
@@ -139,9 +140,23 @@ nav {
     color: white !important;
   }
 }
+
 .submenu2 {
   a {
     border-bottom: 1px solid whitesmoke;
     padding: 169px 0;
+  }
+}
+
+.login {
+  display: 'flex';
+  flex-direction: row;
+
+  a {
+    color: white !important;
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: bold;
+
   }
 }
